# 2026QuantInternships

./: README.md
.github/workflows/: lint-and-compile-workflow.yml
data/: README.md  akuna-capital.yaml  ansatz-capital.yaml  aqr.yaml  aquatic-capital.yaml  arrowstreet.yaml  belvedere-trading.yaml  blackedge-capital.yaml  bridgewater.yaml  campbell-and-company.yaml  chicago-trading-company.yaml  citadel-securities.yaml  citadel.yaml  cubist.yaml  de-shaw.yaml  drw.yaml  five-rings.yaml  flow-traders.yaml  g-research.yaml  geneva-trading.yaml  gsa-capital.yaml  hap-capital.yaml  headlands-tech.yaml  hudson-river-trading.yaml  imc-trading.yaml  jane-street.yaml  jump-trading.yaml  mako-trading.yaml  marshall-wace.yaml  maven-securities.yaml  millenium.yaml  old-mission.yaml  optiver.yaml  pdf-partners.yaml  peak6.yaml  quantlab.yaml  radix-trading.yaml  rentec.yaml  schonfield.yaml  seven-eight.yaml  (+16 more)
src/: .gitignore  dune-project  internships.opam  output.md
src/lib/: data.ml  dune  io.ml  markdown_writer.ml  statics.ml  types.ml
